Added Gemini script and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,17 @@
 /node_modules
 /.pnp
 .pnp.js
+.venv/
 
 # testing
 /coverage
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # next.js
 /.next/
