--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - "8000"
     volumes:
       - ./backend/uploads:/app/uploads
+    environment:
+    - GEMINI_API_KEY=${GEMINI_API_KEY}
 
   nginx:
     image: nginx:alpine
